--- a/kursRabota/src/app/components/login/login.component.html
+++ b/kursRabota/src/app/components/login/login.component.html
@@ -1,15 +1,26 @@
-<div class="container mx-auto p-4">
-    <h2 class="text-2xl font-bold mb-4">Войти</h2>
-    <div *ngIf="error" class="text-red-500 mb-4">{{ error }}</div>
-    <form (ngSubmit)="login()" class="max-w-md">
-      <div class="mb-4">
-        <label for="username" class="block text-sm font-medium text-gray-700">Имя пользователя</label>
-        <input type="text" id="username" [(ngModel)]="credentials.username" name="username" class="mt-1 block w-full p-2 border rounded" required>
-      </div>
-      <div class="mb-4">
-        <label for="password" class="block text-sm font-medium text-gray-700">Пароль</label>
-        <input type="password" id="password" [(ngModel)]="credentials.password" name="password" class="mt-1 block w-full p-2 border rounded" required>
-      </div>
-      <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Войти</button>
-    </form>
+<div class="container mx-auto p-4 animate-fade-in">
+  <h2 class="text-2xl font-bold mb-4 text-gray-800 relative">
+    Войти
+    <span class="block w-12 h-1 bg-gradient-to-r from-blue-500 to-teal-500 mt-2"></span>
+  </h2>
+  <div *ngIf="error" class="text-red-500 mb-4 bg-red-100 p-2 rounded flex items-center">
+    <i class="fas fa-exclamation-circle mr-2"></i>{{ error }}
   </div>
+  <form (ngSubmit)="login()" class="space-y-4">
+    <div>
+      <label for="username" class="flex items-center text-sm font-medium text-gray-700">
+        <i class="fas fa-user mr-2 text-gray-400 text-lg"></i> Имя пользователя
+      </label>
+      <input type="text" id="username" [(ngModel)]="credentials.username" name="username" placeholder="Введите имя пользователя" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 h-10" required>
+    </div>
+    <div>
+      <label for="password" class="flex items-center text-sm font-medium text-gray-700">
+        <i class="fas fa-lock mr-2 text-gray-400 text-lg"></i> Пароль
+      </label>
+      <input type="password" id="password" [(ngModel)]="credentials.password" name="password" placeholder="Введите пароль" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 h-10" required>
+    </div>
+    <button type="submit" class="w-full bg-gradient-to-r from-blue-500 to-teal-500 text-white p-2 rounded-md hover:scale-105 transition duration-200 flex items-center justify-center">
+      <i class="fas fa-sign-in-alt mr-2"></i> Войти
+    </button>
+  </form>
+</div>
